src/layouts/index.css
/*
Template Name: astute
Author: themexbd
*/
/*
-------------------------------------------------------------------------------------
CSS INDEX
======================================================================================
* THEME DEFULT CSS
* SECTION TITLE
* SLIDER BUTTON STYLE
* WIDGET  CSS
* HEADING TOP AREA CSS
* HEADING NAV AREA CSS
* SLIDER CSS
* ABOUT SECTION CSS
* SERCIVE CSS
* PROGRESS CSS
* TEAM CSS
* COUNTER AREA CSS
* PRICING AREA CSS
* BRAND AREA CSS
* TESTIMONIAL AREA CSS
* PORTFOLIO AREA CSS
* BLOG AREA CSS
* BLOG DETAILS AREA CSS
* choose AREA CSS
* COMMENT AREA CSS
* PAGINATION AREA CSS
* BREADCRUMB AREA CSS
* 404 AREA CSS
* FOOTER TOP AREA CSS
* SCROLL TOP CSS
* RESPONSIVE CSS
============================================================================================= */

html,
body {}
img {
    max-width: 100%;
    height: auto;
}
/* box layout */

.box.wrapper {
    max-width: 1200px;
    margin: auto;
    background: #fff;
    box-shadow: 0px 0px 5px #ddd;
}
/* end box layout */

.fix {
    overflow: hidden;
}
.row {
  margin: 0 !important;
}
.clear_both {
    clear: both;
}
.right-text {
  text-align: right;
}

a {
  text-decoration: none !important;
}

button {
  cursor: pointer;
}

.download-btn {
  background-color: #2033AB !important;
  letter-spacing: 1px !important;
  font-family: 'Montserrat', sans-serif !important;
  font-weight: 600 !important;
}

.download-btn {
  vertical-align: middle;
  line-height: 30px;
}

.carousel-control {
  color: #B51D29;
  padding: 5px 20px;
  cursor: pointer;
}
.carousel-control .fa {
  font-size: 35px;
}

.carousel-image {
  height: 70vh;
}

.main-slider-area .overlay {
  z-index: 0;
}

.banner_area .overlay {
  background-color: rgba(0, 0, 0, .3);
}

.slider-control-centerleft, .slider-control-centerright, .slider-control-bottomcenter {
  z-index: 100 !important;
}
.banner-container {
  padding-top: 100px;
}
.area-padding {
  padding: 80px 0 60px;
}

blockquote{
  display:block;
  background: #fff;
  padding: 15px 20px 15px 40px;
  margin: 0 0 20px;
  position: relative;
  overflow: hidden;

  /*Font*/
  font-family: Georgia, serif;
  font-size: 20px;
  line-height: 1.4;
  color: #666;
  text-align: justify;

  /*Borders - (Optional)*/
  border-left: 15px solid #B51D29;
  border-right: 2px solid #B51D29;

  /*Box Shadow - (Optional)*/
  -moz-box-shadow: 2px 2px 15px #ccc;
  -webkit-box-shadow: 2px 2px 15px #ccc;
  box-shadow: 2px 2px 15px #ccc;
}

.fa-facebook-square {
  color: white;
}

blockquote a{
  text-decoration: none;
  background: #eee;
  cursor: pointer;
  padding: 0 3px;
  color: #B51D29;
}

blockquote a:hover{
 color: #666;
}

blockquote em{
  font-style: italic;
}

.camp-info {
  padding: 30px;
}

.anchor-pad {
  height: 80px;
  margin-top: -80px;
}

span[id^="article"] {
  padding-top: 100px;
  margin-top: -100px;
}

.collapse-menu {
  margin-top: 15px;
}

.uppercase {
  text-transform: uppercase;
}

.banner-text {
  padding: 120px 0;
}

.no-left-pad {
  padding-left: 0 !important;
}

.no-right-pad {
  padding-right: 0 !important;
}

.calendar-block {
  position: relative;
  text-transform: uppercase;
  text-align: center;
  height: 100px;
  border: 1px solid black;
}

.calendar-date {
  position: absolute;
  top: 20px;
  left: 0;
  width: 100%;
  color: black;
  font-size: 50px;
  font-weight: bold;
  height: 75px;
  line-height: 75px;
}

.calendar-title {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  background-color: black;
  color: white;
  font-weight: 600;
  height: 25px;
  line-height: 25px;
}

.meeting-desc {
  margin-top: 20px;
}

.file-text {
  color: #9D9D9D;
  font-size: 13px;
}

.map-loader {
  text-align: center;
}

/*=====================
astute HEADING TOP AREA CSS
=========================*/



/* count down area css */

.countdown {
  margin: 20px auto;
}
#meeting-timer .countdown {
  margin: 0 auto;
  padding-bottom: 30px;
}

.countdown-col {
  display: inline-block;
  background-color: rgb(181,29,41,0.7);
  margin: 25px;
  padding: 30px 20px 0 20px;
  width: 175px;
  height: 175px;
}
#meeting-timer .countdown-col {
  margin: 10px;
  padding: 15px 5px;
  width: 120px;
  height: 120px;
}

.countdown-col-element {
  display: inline-block;
  margin: 0 20px;
  display: flex;
  flex-direction: column;
  color: white;
  font-weight: 400;
}

.colon {
  color: white;
  font-size: 60px;
  font-weight: bold;
}

.countdown-col-element strong {
  font-size: 3em;
}
#meeting-timer .countdown-col-element strong {
  font-size: 40px;
}
 .row.sg {
	 margin-top: 38px;
 }
.count_down_area {
  position: relative;
  height: 650px;
  overflow: hidden;
}
.overlay {
  position: absolute;
  top: 0;
  left: 0;
  clear: float;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.2);
}
#feature1_overlay {
  background-color: rgba(181, 29, 41, 0.7);
}
#feature2_overlay {
  background-color: rgba(32, 51, 171, 0.7);
}
#feature3_overlay {
  background-color: rgba(156, 132, 0, 0.7);
}

.single_counter1{
    background: rgba(240, 30, 74, 0.85);
    position: relative;
    width: 233px;
    height: 175px;
    margin: auto;
}
.single_counter1::before{
position: absolute;
    content: "";
    background: #fff;
    height: 15px;
    width: 15px;
    right: -38px;
    top: 65px;
    border-radius: 50%;
}
.single_counter1:last-child::before{

}
.single_counter1:last-child::after{

}
.single_counter1::after{
    position: absolute;
    content: "";
    background: #fff;
    height: 15px;
    width: 15px;
    right: -38px;
    top: 99px;
    border-radius: 50%;
}
.single_counter_inner{}
.single_counter_content{
	text-align: center;
}
.single_counter_content h2{
    font-size: 50px;
    font-weight: 500;
    color: #fff;
    padding-top: 34px;
}
.single_counter_content p{
	font-size: 20px;
    font-weight: 500;
    color: #fff;
    margin-top: 7px;
}
/* count down bnt */
.counter_bnt {
    text-align: center;
    margin-top: 5px;
    overflow: hidden;
    transition: .5s;
}
/* ... */

